feat: US18 - Sistema atribui automaticamentes os pedidos prontos a um entregador. feat: US19 - Caso não tenha entregadores disponiveis para um pedido pronto, uma mensagem é exibida para o cliente